# Single-Player-Chess

./: .clang-format  CMakeLists.txt  colour.py  main.py  move.py  piece.py  square.py  ui.py  vars.py
src/: CMakeLists.txt  colour.h  main.cpp  square.h  vars.h
src/move/: CMakeLists.txt  move.cpp  move.h
src/pieces/: CMakeLists.txt  pieces.cpp  pieces.h
src/ui/: CMakeLists.txt  promotion.cpp  promotion.h  record.cpp  record.h  ui.cpp  ui.h  window.cpp  window.h
